--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title:
+title: The Grep Mutex
 email:
-description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+description: "The Last Mutex You'll Ever Need"
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: "https://grepmutex.github.io" # the base hostname & protocol for your site
 
 twitter_username:
-github_username:
+github_username: grepmutex
 
 # Build settings
 markdown: kramdown
